--- a/Module_1_report.html
+++ b/Module_1_report.html
@@ -16,10 +16,10 @@
 
 
   <header>
-    <h1>Fractal Geometry Lab Report</h1>
+    <h1>Module 1 Lab Report</h1>
     <p class="author">
-      [Your Name] <br />
-      [Date]
+      Anthony Lenner <br />
+      1/27/2025
     </p>
   </header>
   
@@ -36,10 +36,8 @@
       <section id="introduction">
         <h2>Introduction</h2>
         <p>
-          This is a sample introduction showcasing how you might structure 
-          your opening section. Replace this paragraph with a concise 
-          overview of the topic or project you are addressing. You can then 
-          expand the explanation as needed.
+          In this module, we learned how to use Python turtle graphics to display drawn graphics. 
+		Additionally we also learned to define functions and use for loops, which combined with the turtle graphics can create complex shapes.
         </p>
       </section>
 
