--- a/Module_1_report.html
+++ b/Module_1_report.html
@@ -118,10 +118,13 @@ show()
       
         <h2>Results &amp; Analysis</h2>
         <p>
-          In this placeholder section, you might describe observations,
-          results, or insights gained from any analysis. You can incorporate 
-          references to equations (e.g., $y = mx + b$) or embed images and 
-          other visual aids to illustrate your points.
+          Using the code presented to us by Professor Hahn in Module 1, we learned a few simple steps to generate polygons.
+	  First, we import the turtle library and setup the canvas. Second, to randomly color the polygons, we use the random library and set up
+	  a function that returns a random color. Third, we set up a polygon drawing function, using a loop to draw each side, 
+	  based of the number of sides and length of each side. Finally, we code the line of polygons with increasing number of sides.
+          To do that, we put the turtle of the left sided of the canvas, create a for loop that ranges from 3 to 20 number of sided and use
+	  the function we set up to draw a polygon of n sides with a random color. It is also important to add the penup and pendown functions
+	  when doing the jump to the right in order to draw the next polygon. Then our line is ready!
         </p>
 
 
@@ -129,7 +132,7 @@ show()
 
         <figure>
           <img
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Mandel_zoom_00_mandelbrot_set.jpg/800px-Mandel_zoom_00_mandelbrot_set.jpg"
+            src="https://i.ibb.co/J72rxJz/turtle.png"
             alt="Mandelbrot Broad View"
             width="600"
             height="400"
