--- a/Module_1_report.html
+++ b/Module_1_report.html
@@ -133,15 +133,14 @@ show()
         <figure>
           <img
             src="https://i.ibb.co/J72rxJz/turtle.png"
-            alt="Mandelbrot Broad View"
+            alt="Line of Polygons"
             width="600"
             height="400"
             loading="lazy"
           />
           <figcaption>
-            <strong>Figure 1:</strong> A broad view of the Mandelbrot set 
-            (max_iter = 100). Colors represent how many iterations were 
-            needed to exceed |z|=2.
+            <strong>Figure 1:</strong> A line of polygons generated
+		  with the python turtle graphics.
           </figcaption>
         </figure>
 
