--- a/Module_2_report.html
+++ b/Module_2_report.html
@@ -135,9 +135,7 @@ def dragon_curve(order, length, turn_direction):
             loading="lazy"
           />
           <figcaption>
-            <strong>Figure 1:</strong> A broad view of the Mandelbrot set 
-            (max_iter = 100). Colors represent how many iterations were 
-            needed to exceed |z|=2.
+             Koch Snowflake of order 7.
           </figcaption>
         </figure>
 
